--- a/assets/css/table.scss
+++ b/assets/css/table.scss
@@ -230,6 +230,7 @@ html {
                 position: relative;
                 overflow: hidden;
                 white-space: nowrap;
+                text-overflow: ellipsis;
                 @media all and (max-width: 1700px) {
                     font-size: 12px;
                     line-height: 16px;
